--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -2,6 +2,7 @@
   max-width: 450px;
   margin: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  min-height: calc(100vh - 100px);
 
   .container {
     padding: 20px;
