--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -18,5 +18,13 @@
       flex-direction: column;
       gap: 20px;
     }
+
+    .section2 {
+      text-align: center;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 }
