--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,3 +1,5 @@
+@import "../../styles/constants.scss";
+
 .Button {
   padding: 10px;
   border-radius: 5px;
@@ -12,10 +14,10 @@
   }
 
   &.primary {
-    background-color: #3a86ff;
+    background-color: $primary-color;
   }
 
   &.secondary {
-    background-color: #ffbe0b;
+    background-color: $secondary-color;
   }
 }
