--- a/src/components/TopBar/style.scss
+++ b/src/components/TopBar/style.scss
@@ -1,6 +1,8 @@
+@import "../../styles/constants.scss";
+
 .TopBar {
   header {
-    background-color: #ffbe0b;
+    background-color: $secondary-color;
     text-align: center;
     color: white;
     display: flex;
@@ -23,7 +25,7 @@
   }
 
   nav {
-    background-color: #3a86ff;
+    background-color: $primary-color;
     padding: 10px;
     text-align: center;
     border-radius: 5px;
