--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -11,15 +11,7 @@
     align-items: center;
     gap: 30px;
 
-    .rules {
-      text-align: center;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .section2 {
+    .banner-section {
       text-align: center;
       display: flex;
       align-items: center;
