--- a/src/components/BaseButton/style.scss
+++ b/src/components/BaseButton/style.scss
@@ -1,14 +1,17 @@
-@import "../../styles/constants.scss";
+@import "styles/constants.module.scss";
 
-.Button {
+.BaseButton {
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
   color: white;
   font-size: 1.2em;
-  transition: background-color 0.3s ease;
+  width: fit-content;
 
   a {
+    display: block;
+    width: 100%;
+
     color: white;
     text-decoration: none;
   }
