--- a/src/components/Image/style.scss
+++ b/src/components/Image/style.scss
@@ -1,4 +1,4 @@
-@import "../../styles/constants.scss";
+@import "styles/constants.module.scss";
 
 .Image.large img {
   max-width: $large-image-size;
