Change FlagImage to use Image

--- a/src/styles/constants.module.scss
+++ b/src/styles/constants.module.scss
@@ -17,6 +17,7 @@ $tertiary-text-color: $secondary-color;
 $small-image-size: 35px;
 $medium-image-size: 120px;
 $large-image-size: 300px;
+$flag-image-size: 160px;
 
 :export {
   primaryColor: $primary-color;
