--- a/src/styles/constants.module.scss
+++ b/src/styles/constants.module.scss
@@ -17,7 +17,9 @@ $tertiary-text-color: $secondary-color;
 $small-image-size: 35px;
 $medium-image-size: 120px;
 $large-image-size: 300px;
-$flag-image-size: 160px;
+
+$flag-image-width: 160px;
+$flag-image-height: 90px;
 
 :export {
   primaryColor: $primary-color;
