--- a/src/components/PageWithTopbar/style.scss
+++ b/src/components/PageWithTopbar/style.scss
@@ -3,6 +3,7 @@
   margin: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   min-height: 100vh;
+  padding-bottom: 50px;
 
   .container {
     padding: 20px;
