--- a/src/pages/Player/style.scss
+++ b/src/pages/Player/style.scss
@@ -1,7 +1,8 @@
 .Profile {
-  .user-info {
+  .user-info,
+  .final-bets .final-bet {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 2fr;
     align-items: center;
     gap: 20px;
     margin-top: 20px;
