--- a/src/pages/Players/style.scss
+++ b/src/pages/Players/style.scss
@@ -7,5 +7,8 @@
     border-radius: 5px;
     background-color: $secondary-background-color;
     text-align: center;
+
+    cursor: pointer;
+    border: 1px solid black;
   }
 }
