--- a/src/components/MatchCardBets/style.scss
+++ b/src/components/MatchCardBets/style.scss
@@ -3,7 +3,7 @@
 .MatchCardBets {
   .bet {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 2fr 1fr;
     align-items: center;
     gap: 20px;
     min-width: 100%;
@@ -20,7 +20,8 @@
     }
 
     &.active > .user,
-    &.active > .result {
+    &.active > .result,
+    &.active > .points {
       color: $primary-color;
     }
   }
