--- a/src/components/MatchCardBets/style.scss
+++ b/src/components/MatchCardBets/style.scss
@@ -1,6 +1,8 @@
 @import "styles/constants.module.scss";
 
 .MatchCardBets {
+  margin-top: 10px;
+
   .bet {
     display: grid;
     grid-template-columns: 4fr 2fr 1fr;
