--- a/src/components/MatchCard/style.scss
+++ b/src/components/MatchCard/style.scss
@@ -36,6 +36,12 @@
     min-width: 100%;
     margin-bottom: 10px;
     font-size: 2em;
+
+    .home.clasified {
+      border: 2px solid $primary-color;
+      border-radius: 10px;
+      padding: 5px;
+    }
   }
 
   .Image.small {
