--- a/src/components/MatchCardBets/style.scss
+++ b/src/components/MatchCardBets/style.scss
@@ -19,6 +19,10 @@
       min-width: 100%;
       margin-top: 4px;
       margin-bottom: 4px;
+
+      .clasified {
+        color: black;
+      }
     }
 
     &.active > .user,
