--- a/src/pages/Ranking/style.scss
+++ b/src/pages/Ranking/style.scss
@@ -7,7 +7,7 @@
 
     .row {
       display: grid;
-      grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr;
       align-items: center;
 
       .user {
